# hermes-node-plugin

./: CONTRIBUTING.md  README.md  REQUIREMENTS.md  SECURITY.md  __init__.py  cli.py  errors.py  lifecycle.py  plugin.yaml  pyproject.toml  registry.py  server.py  tokens.py  tools.py
.github/workflows/: release.yml
hermes_nodes_plugin/: __init__.py  cli.py  server.py  tokens.py
scripts/: run_server.py
tests/: conftest.py  test_auth.py  test_cli.py  test_lifecycle.py  test_tokens.py
wsserver/: __init__.py  server.py
